# Ludus

./: .gitignore  README.md  list-of-algorithms.md
10-PRINT-CHR-205-5-RND-1-GOTO-10/: index.html
haskell-cheatsheet/: docco.css  index.html
infpat/: patrep.big.html  patrep.html  patrep.html~  patrep.med.html
unilectures/: .classpath  .project
unilectures.cpp/: sq-n-mult.cpp  sq-n-mult.sh  stack.cpp
unilectures.hs/: Sorts.hs  Trie.hs  asciiL.txt  selfDescribing.hs
unilectures.hs/Nim/: Base.hs  CpuPlayer.hs  Main.hs  Nim.hs  Readme.md  Utils.hs
unilectures.hs/binarySearch/: Ads-binarySearch.cabal  Main.hs  Test.hs  Tree.hs  run.sh
unilectures.hs/cheatsheet/: Cheatsheet.hs  Makefile  README.md
unilectures.hs/combinations/: combinations-pl.hs  combinations.hs  combinations.md
unilectures.hs/divisors/: divisors.hs
unilectures.hs/forever/: forever.hs
unilectures.js/: dyadic.html  subsequencof.js
unilectures.m/: chars.m  gramschmidt.m  hello.m  infoue-3.m  infoue-4.m  infoue6.m
unilectures.nb/: infue-hausaufgabe01.nb  mathe-hausaufgabe01-plots.nb  mathe-hausaufgabe01.nb  mathe-hausaufgabe05-notes.nb  mathe-hausaufgabe05.nb  mathe-hausaufgabe12-plots.nb  mathe2-hausaufgabe1-plots.nb  surfaces.nb
unilectures.pl/: findatoms.pl  helloworld.pl  helloworld.pl~
unilectures.processing/: .classpath  .project
unilectures.py/: .project  .pydevproject
unilectures.rb/: patience-sort.rb
unilectures.rs/: fizzbuzz.rs  flat.rs  hello.rs  hello_parallel.rs  monsters.rs  testing.rs  thawing_the_vector.rs
unilectures.tex/: .gitignore
(+682 files in other folders)
